force-app/main/default/objects/Work__c/Work__c.object-meta.xml
<CustomObject>
    <label>Work</label>
    <nameField>
        <displayFormat>W-{000000}</displayFormat>
        <label>Número</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Works</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>