force-app/main/default/objects/Work__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Case de origem</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Case de origem</relationshipLabel>
    <relationshipName>WorksOrigem</relationshipName>
    <type>Lookup</type>
</CustomField>