force-app/main/default/objects/Work__c/fields/DataConclusao__c.field-meta.xml
<CustomField>
    <fullName>DataConclusao__c</fullName>
    <label>Data de conclusão</label>
    <type>Date</type>
</CustomField>