force-app/main/default/objects/Work__c/fields/DataPrevista__c.field-meta.xml
<CustomField>
    <fullName>DataPrevista__c</fullName>
    <label>Data prevista</label>
    <type>Date</type>
</CustomField>