force-app/main/default/objects/Work__c/fields/Etapa__c.field-meta.xml
<CustomField>
    <fullName>Etapa__c</fullName>
    <label>Etapa da execução</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aguardando desenvolvimento</fullName>
                <default>true</default>
                <label>Aguardando desenvolvimento</label>
            </value>
            <value>
                <fullName>Em desenvolvimento</fullName>
            </value>
            <value>
                <fullName>Aguardando deploy</fullName>
            </value>
            <value>
                <fullName>Em QA</fullName>
            </value>
            <value>
                <fullName>Aguardando cliente</fullName>
            </value>
            <value>
                <fullName>Bloqueado</fullName>
            </value>
            <value>
                <fullName>Concluído</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>