force-app/main/default/objects/Work__c/fields/ParentWork__c.field-meta.xml
<CustomField>
    <fullName>ParentWork__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work pai</label>
    <referenceTo>Work__c</referenceTo>
    <relationshipLabel>Work pai</relationshipLabel>
    <relationshipName>WorksFilhas</relationshipName>
    <type>Lookup</type>
</CustomField>