force-app/main/default/objects/Work__c/fields/Prioridade__c.field-meta.xml
<CustomField>
    <fullName>Prioridade__c</fullName>
    <label>Prioridade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Média</fullName>
                <default>true</default>
                <label>Média</label>
            </value>
            <value>
                <fullName>Baixa</fullName>
            </value>
            <value>
                <fullName>Alta</fullName>
            </value>
            <value>
                <fullName>Crítica</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>