force-app/main/default/objects/Work__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Projeto</label>
    <referenceTo>Projeto__c</referenceTo>
    <relationshipLabel>Projeto</relationshipLabel>
    <relationshipName>Works</relationshipName>
    <type>Lookup</type>
</CustomField>