force-app/main/default/objects/Work__c/validationRules/ImpedirAutoRelacionamento.validationRule-meta.xml
<ValidationRule>
    <fullName>ImpedirAutoRelacionamento</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(ParentWork__c)), ParentWork__c = Id)</errorConditionFormula>
    <errorDisplayField>ParentWork__c</errorDisplayField>
    <errorMessage>Uma Work não pode ser sua própria Work pai.</errorMessage>
</ValidationRule>