force-app/main/default/objects/Work__c/validationRules/ValidarDatas.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidarDatas</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(DataInicio__c)), NOT(ISBLANK(DataConclusao__c)), DataConclusao__c &lt; DataInicio__c)</errorConditionFormula>
    <errorDisplayField>DataConclusao__c</errorDisplayField>
    <errorMessage>A conclusão não pode ser anterior ao início.</errorMessage>
</ValidationRule>